--- a/neuro-core/src/main/resources/application.yml
+++ b/neuro-core/src/main/resources/application.yml
@@ -7,17 +7,17 @@ spring:
   application:
     name: neuro-sync
   datasource:
-    url: jdbc:postgresql://localhost:5432/neurosync
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/neurosync?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
 
   # Security will be configured later
